# beaches_front

./: Cargo.toml
assets/css/: bootstrap.css  styles.css  styles.min.css.map
assets/icon-fonts/ionicons/: cheatsheet.html
assets/images/my/: Шезлонги.avif  (+1 more)
assets/js/: apexcharts-bar.js  apexcharts-line.js  apexcharts-pie.js  apexcharts-radialbar.js  apexcharts-scatter.js  auth2.js  authentication-main.js  custom-switcher.min.js  custom.js  defaultmenu.min.js  jsvectormap.js  landing.js  leaflet.js  main.js  ratings.js  scheme-booking-settings.js  scheme-data.js  scheme-designer-editor.js  scheme-designer-viewer.js  scheme-designer.min.js  scheme-editor.js  scheme-module-settings.js  scheme-place-settings.js  scheme-select-module.js  scheme-viewer.js  select2.js  sweet-alerts.js  work.js
assets/json/: data_editor.json  data_editor2.json  data_tmp.json  data_view.json  data_view2.json  tst.json
assets/scss/: styles.scss
src/: errors.rs  main.rs  routes.rs
src/utils/: auth.rs  mod.rs  reqwest.rs
src/views/: auth_pages.rs  mod.rs  pages.rs  places_pages.rs  user_pages.rs
templates/: about.stpl  anon_about.stpl  anon_mainpage.stpl  anon_policy.stpl  anon_terms.stpl  mainpage.stpl  not_found.stpl  policy.stpl  terms.stpl
templates/auth/: auth.stpl  signup.stpl
templates/partials/: anon_f.stpl  anon_h.stpl  anon_header.stpl  anon_sidebar.stpl  commonjs.stpl  f.stpl  footer.stpl  h.stpl  header.stpl  mainhead.stpl  sidebar.stpl  switcher.stpl
templates/places/: anon_place.stpl  create.stpl  place.stpl  place_create_map.stpl
templates/user/: index.stpl
(+19 files in other folders)
